[package]
name = "poc"
version = "0.1.0"
authors = ["Lawliet-Chan <Lawliet-Chan@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-io = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/io" }

[features]
default = ["std"]
std = ["sp-io/std"]