[package]
name = "poc"
version = "0.1.0"
authors = ["Lawliet-Chan <Lawliet-Chan@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-runtime-interface = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/runtime-interface" }

[dev-dependencies]
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179


[features]
default = ["std"]
std = [
    "sp-runtime-interface/std",
]