[package]
name = "bhd-chain-runtime"
version = "0.1.0"
authors = ["Lawliet-Chan <Lawliet-Chan@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0.102", optional = true }

# primitives
sp-authority-discovery = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/authority-discovery" }
sp-consensus-babe = { version = "0.8.0-alpha.4", default-features = false, path = "../substrate/primitives/consensus/babe" }
sp-block-builder = { path = "../substrate/primitives/block-builder", default-features = false, version = "2.0.0-alpha.4"}
sp-inherents = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/inherents" }
node-primitives = { version = "2.0.0-alpha.4", default-features = false, path = "../primitives" }
sp-offchain = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/offchain" }
sp-core = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/core" }
sp-std = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/std" }
sp-api = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/api" }
sp-runtime = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/runtime" }
sp-staking = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/staking" }
sp-keyring = { version = "2.0.0-alpha.4", optional = true, path = "../substrate/primitives/keyring" }
sp-session = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/session" }
sp-transaction-pool = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/transaction-pool" }
sp-version = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/primitives/version" }

# frame dependencies
frame-executive = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/executive" }
frame-benchmarking = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/benchmarking", optional = true }
frame-support = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/support" }
frame-system = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/system" }
frame-system-rpc-runtime-api = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/system/rpc/runtime-api/" }
pallet-authority-discovery = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/authority-discovery" }
pallet-authorship = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/authorship" }
pallet-babe = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/babe" }
pallet-balances = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/balances" }
pallet-collective = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/collective" }
pallet-contracts = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/contracts" }
pallet-contracts-primitives = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/contracts/common/" }
pallet-contracts-rpc-runtime-api = { version = "0.8.0-alpha.4", default-features = false, path = "../substrate/frame/contracts/rpc/runtime-api/" }
pallet-democracy = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/democracy" }
pallet-elections-phragmen = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/elections-phragmen" }
pallet-finality-tracker = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/finality-tracker" }
pallet-grandpa = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/grandpa" }
pallet-im-online = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/im-online" }
pallet-indices = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/indices" }
pallet-identity = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/identity" }
pallet-membership = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/membership" }
pallet-offences = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/offences" }
pallet-randomness-collective-flip = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/randomness-collective-flip" }
pallet-recovery = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/recovery" }
pallet-session = { version = "2.0.0-alpha.4", features = ["historical"], path = "../substrate/frame/session", default-features = false }
pallet-session-benchmarking = { version = "2.0.0-alpha.4", path = "../substrate/frame/session/benchmarking", default-features = false, optional = true }
pallet-staking = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/staking" }
pallet-staking-reward-curve = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/staking/reward-curve" }
pallet-sudo = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/sudo" }
pallet-society = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/society" }
pallet-timestamp = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/timestamp" }
pallet-treasury = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/treasury" }
pallet-utility = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/utility" }
pallet-transaction-payment = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/transaction-payment" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/transaction-payment/rpc/runtime-api/" }
pallet-vesting = { version = "2.0.0-alpha.4", default-features = false, path = "../substrate/frame/vesting" }

poc = { version = "0.1.0", path = "../poc", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0-alpha.4", path = "../substrate/primitives/io" }


[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", path = "../substrate/utils/wasm-builder-runner" }

[features]
default = ["std"]
std = [
	    "sp-authority-discovery/std",
    	"pallet-authority-discovery/std",
    	"pallet-authorship/std",
    	"sp-consensus-babe/std",
    	"pallet-babe/std",
    	"pallet-balances/std",
    	"sp-block-builder/std",
    	"codec/std",
    	"pallet-collective/std",
    	"pallet-contracts/std",
    	"pallet-contracts-primitives/std",
    	"pallet-contracts-rpc-runtime-api/std",
    	"pallet-democracy/std",
    	"pallet-elections-phragmen/std",
    	"frame-executive/std",
    	"pallet-finality-tracker/std",
    	"pallet-grandpa/std",
    	"pallet-im-online/std",
    	"pallet-indices/std",
    	"sp-inherents/std",
    	"pallet-membership/std",
    	"pallet-identity/std",
    	"node-primitives/std",
    	"sp-offchain/std",
    	"pallet-offences/std",
    	"sp-core/std",
    	"pallet-randomness-collective-flip/std",
    	"sp-std/std",
    	"rustc-hex",
    	"serde",
    	"pallet-session/std",
    	"sp-api/std",
    	"sp-runtime/std",
    	"sp-staking/std",
    	"pallet-staking/std",
    	"sp-keyring",
    	"sp-session/std",
    	"pallet-sudo/std",
    	"frame-support/std",
    	"frame-benchmarking/std",
    	"frame-system-rpc-runtime-api/std",
    	"frame-system/std",
    	"pallet-timestamp/std",
    	"pallet-transaction-payment-rpc-runtime-api/std",
    	"pallet-transaction-payment/std",
    	"pallet-treasury/std",
    	"sp-transaction-pool/std",
    	"pallet-utility/std",
    	"sp-version/std",
    	"pallet-society/std",
    	"pallet-recovery/std",
    	"pallet-vesting/std",
    
        "poc/std",
	]
	
runtime-benchmarks = [
	"frame-benchmarking",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
]
